# clminibench

jni/: port.c
jni/linux/: CMakeLists.txt  cli-app.cpp
